[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clevagent"
version = "0.4.0"
description = "Monitor your AI agents. Heartbeat watchdog, loop detection, cost tracking."
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = ["ai", "agent", "monitoring", "heartbeat", "observability"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Topic :: System :: Monitoring",
]
dependencies = [
    "requests>=2.25.0",
]

[project.optional-dependencies]
openai = ["openai>=1.0.0"]
anthropic = ["anthropic>=0.26.0"]
all = ["openai>=1.0.0", "anthropic>=0.26.0"]

[project.urls]
Homepage = "https://clevagent.io"
Documentation = "https://clevagent.io/docs"
Repository = "https://github.com/seankwon816/clevagent-python"
Issues = "https://github.com/seankwon816/clevagent-python/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["clevagent*"]
